==> Moddable-OpenSource/moddable/xs/platforms/zephyr/xsHost.c <==
#include <setjmp.h>
#include "xsAll.h"
#include "xs.h"
#include "xsScript.h"
#include "xsPlatform.h"
#include "xsHosts.h"
#include "mc.defines.h"
#include <stdio.h>
	#include "modTimer.h"
	#include "modInstrumentation.h"
	#define INSTRUMENT_CPULOAD 0		//@@ zephyr
	#define kTargetCPUCount 1
	#define espInstrumentCount kModInstrumentationSlotHeapSize - kModInstrumentationPixelsDrawn

void espSampleInstrumentation(modTimer timer, void *refcon, int refconSize)
{
	txInteger values[espInstrumentCount];
	int what;
	xsMachine *the = *(xsMachine **)refcon;

	k_mutex_lock(&gInstrumentMutex, K_FOREVER);

	for (what = kModInstrumentationPixelsDrawn; what <= (kModInstrumentationSlotHeapSize - 1); what++)
		values[what - kModInstrumentationPixelsDrawn] = modInstrumentationGet_(the, what);

	if (values[kModInstrumentationTurns - kModInstrumentationPixelsDrawn])
		values[kModInstrumentationTurns - kModInstrumentationPixelsDrawn] -= 1;		// ignore the turn that generates instrumentation

	fxSampleInstrumentation(the, espInstrumentCount, values);

	modInstrumentationSet(PixelsDrawn, 0);
	modInstrumentationSet(FramesDrawn, 0);
	modInstrumentationSet(PocoDisplayListUsed, 0);
	modInstrumentationSet(PiuCommandListUsed, 0);
#if kModInstrumentationHasNetwork
	modInstrumentationSet(NetworkBytesRead, 0);
	modInstrumentationSet(NetworkBytesWritten, 0);
#endif
	modInstrumentationSet(Turns, 0);
	modInstrumentMachineReset(the);

	k_mutex_unlock(&gInstrumentMutex);
}

int modMessagePostToMachine(xsMachine *the, uint8_t *message, uint16_t messageLength, modMessageDeliver callback, void *refcon)
{
	modMessageRecord msg;

#ifdef mxDebug
	if (0xffff == messageLength) {
		msg.message = NULL;
		msg.callback = callback;
		msg.refcon = refcon;
		msg.length = 0;
		return k_msgq_put(&the->msgQueue, &msg, MODDEF_TASK_QUEUEWAIT);		//@@ separate queue for debug msgs
	}
#endif

	msg.embeddedMessage = 0;
	if (message && messageLength) {
		if (messageLength <= sizeof(msg.message)) {
			msg.embeddedMessage = 1;
			c_memmove(&msg.message, message, messageLength);
		}
		else {
			msg.message = c_malloc(messageLength);
			if (!msg.message) return -1;

			c_memmove(msg.message, message, messageLength);
		}
	}
	else
		msg.message = NULL;

	msg.length = messageLength;
	msg.callback = callback;
	msg.refcon = refcon;

	if (0 == k_msgq_put(&the->msgQueue, &msg, MODDEF_TASK_QUEUEWAIT))
		return 0;

	if (msg.message && !msg.embeddedMessage)
		c_free(msg.message);

	return -2;
}

int modMessagePostToMachineFromISR(xsMachine *the, modMessageDeliver callback, void *refcon)
{
	modMessageRecord msg;

	msg.message = NULL;
	msg.length = 0;
	msg.callback = callback;
	msg.refcon = refcon;
	msg.embeddedMessage = 0;

	k_msgq_put(&the->msgQueue, &msg, K_NO_WAIT);

	return 0;
}

void modMessageService(xsMachine *the, int maxDelayMS)
{
	modMessageRecord msg;
	uint32_t startTime = modMilliseconds();
	uint32_t maxDuration = (uint32_t)maxDelayMS;
	uint32_t count;
	int err;

	count = k_msgq_num_used_get(&the->msgQueue);
	if (!count) count = 1;

#if !mxDebug
	modWatchDogReset();
#endif

	do {
		err = k_msgq_get(&the->msgQueue, &msg, Z_TIMEOUT_MS(maxDelayMS));
		if (0 == err) {
			if (msg.embeddedMessage)
				(msg.callback)(the, msg.refcon, (uint8_t *)&msg.message, msg.length);
			else {
				(msg.callback)(the, msg.refcon, msg.message, msg.length);
				if (msg.message)
					c_free(msg.message);
			}
		}

		if (!--count)
			break;
		maxDelayMS = 0;
	} while ((modMilliseconds() - startTime) < maxDuration);

	modWatchDogReset();
}

void modMachineTaskUninit(xsMachine *the)
{
	modMessageRecord msg;

	while (0 == k_msgq_get(&the->msgQueue, &msg, K_NO_WAIT)) {
		if (msg.message && !msg.embeddedMessage)
			c_free(msg.message);
	}

	k_msgq_cleanup(&the->msgQueue);
}

static txBoolean spiWrite(void *dst, size_t offset, void *buffer, size_t size)
{
	offset += (uintptr_t)dst;

	if ((offset + size) > (uintptr_t)kModulesEnd)
		return 0;		// attempted write beyond end of available space

	// depends on fxMapArchive writng one sector at a time
	if (!(offset & (gModFlashBlockSize - 1))) {		// offset at start of a sector, erase sector
		if (!modSPIErase(offset - (uintptr_t)gPartitionAddress, gModFlashBlockSize))
			return 0;
	}

	return modSPIWrite(offset - (uintptr_t)gPartitionAddress, size, buffer);
}

uint8_t modSPIFlashInit(void)
{
	if (gModFlashArea)
		return 1;

	int gModPartitionID = FIXED_PARTITION_ID(xs_mod);
	const struct flash_area *fa;
	if (0 != flash_area_open(gModPartitionID, &fa))
		return 0;

	gModFlashArea = (struct flash_area *)fa;
	gModWriteAlign = flash_area_align(gModFlashArea);

	struct flash_pages_info page_info;
	if (flash_get_page_info_by_offs(gModFlashArea->fa_dev, gModFlashArea->fa_off, &page_info) < 0) {
		flash_area_close(gModFlashArea);		
		return 0;
	}
	gModFlashBlockSize = page_info.size;

#if defined(CONFIG_SOC_FAMILY_ESP32)
	spi_flash_mmap_handle_t handle;
	spi_flash_mmap(gModFlashArea->fa_off, gModFlashArea->fa_size, SPI_FLASH_MMAP_DATA, &gPartitionAddress, &handle);
#elif defined(CONFIG_SOC_FAMILY_STM32)
	gPartitionAddress = (void *)(0x08000000 + gModFlashArea->fa_off);
#else // fallback - load into RAM
	uint32_t modSize;
	if (!modSPIRead(0, sizeof(uint32_t), (uint8_t *)&modSize))
		return 0;
	modSize = c_read32be(&modSize);
	gPartitionAddress = c_malloc(modSize);
	if (C_NULL == gPartitionAddress)
		return 0;
	if (!modSPIRead(0, modSize, (uint8_t *)gPartitionAddress)) {
		c_free(gPartitionAddress);
		gPartitionAddress = C_NULL;
		return 0;
	}
#endif

	return 1;
}

uint8_t modSPIRead(uint32_t offset, uint32_t size, uint8_t *dst)
{
	if (!modSPIFlashInit())
		return 0;

	if (flash_area_read(gModFlashArea, offset, dst, size) < 0)
		return 0;
	
	return 1;
}

uint8_t modSPIWrite(uint32_t offset, uint32_t size, const uint8_t *src)
{
	if (!modSPIFlashInit())
		return 0;

	size = (size + gModWriteAlign - 1) & ~(gModWriteAlign - 1);		// ugly hack, but works for mods. the alternative is to make all writers aware of gModWriteAlign

	if (flash_area_write(gModFlashArea, offset, src, size) < 0)
		return 0;

	return 1;
}

uint8_t modSPIErase(uint32_t offset, uint32_t size)
{
	if (!modSPIFlashInit())
		return 0;

	if (flash_area_erase(gModFlashArea, offset, size) < 0)
		return 0;

	return 1;
}

void modGetTimeOfDay(struct modTimeVal *tv, struct modTimeZone *tz)
{
	struct timespec ts;

	sys_clock_gettime(SYS_CLOCK_REALTIME, &ts);

	if (tv) {
		tv->tv_sec = ts.tv_sec;
		tv->tv_usec = ts.tv_nsec / 1000;
	}
	if (tz) {
//		tz->tz_minuteswest = gTimeZoneOffset;
//		tz->tz_dsttime = gDaylightSavings;
	}
}

void modSetTime(uint32_t seconds)
{
	//@@ untested?
	struct timespec ts = { .tv_sec = seconds };
	sys_clock_settime(SYS_CLOCK_REALTIME, &ts);
}
